Updated API spec to give a more useful response for Action endpoints upon execution, now also advises if there any more actions to undo/redo
Added a ConcurrencyControllerEntity interface that is implemented by Client, Clinician, Admin
  this is used to check generic ETags for undo/redo. Interface contains one method: getETag

ActionInvoker now allows for a peek into the next undo/redo action.

Actions now have a public method to get their modified Object used for concurrency checks

Fully implemented undo and redo endpoints in server side

Fixed issue where some Controllers weren't using actions for creates and deletes so they were not undoable

#implement #fix #story[782]

Took 7 minutes
